fix: homepage CTA not clickable on mobile (#117)

--- a/src/style.less
+++ b/src/style.less
@@ -3295,6 +3295,7 @@ table th {
         height: 40px;
         font-size: var(--fontSize-0);
         padding: 0 0;
+        z-index: 10;
     }
 
     .section-four-tile-wrapper {
